<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.EspTouchActivity"
        android:padding="16dp">

    <TextView
            android:id="@+id/tv_ap_ssid_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:singleLine="true"
            android:text="@string/esptouch2_ssid_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/tv_ap_ssid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_ap_ssid_label"
            app:layout_constraintStart_toEndOf="@id/tv_ap_ssid_label"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/tv_ap_bssid_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="bottom"
            android:singleLine="true"
            android:text="@string/esptouch2_bssid_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ap_ssid_label"/>

    <TextView
            android:id="@+id/tv_ap_bssid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_ap_bssid_label"
            app:layout_constraintStart_toEndOf="@id/tv_ap_bssid_label"
            app:layout_constraintTop_toTopOf="@id/tv_ap_bssid_label"/>

    <TextView
            android:id="@+id/tv_ip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="bottom"
            android:singleLine="true"
            android:text="@string/esptouch2_ip_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ap_bssid_label"/>

    <TextView
            android:id="@+id/tv_ip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_ip_label"
            app:layout_constraintStart_toEndOf="@id/tv_ip_label"
            app:layout_constraintTop_toTopOf="@id/tv_ip_label"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_ap_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/esptouch2_password_label"
            app:layout_constraintTop_toBottomOf="@id/tv_ip_label"
            app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_ap_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_device_count"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:hint="@string/esptouch2_device_count"
            app:layout_constraintTop_toBottomOf="@id/layout_ap_password">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_device_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="1"
                android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/esptouch2_confirm"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>



